--- a/WeModPatcher/App.xaml
+++ b/WeModPatcher/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WeModPatcher"
-             xmlns:converters="clr-namespace:WeModPatcher.Converters"
-             StartupUri="/View/MainWindow/MainWindow.xaml">
+             xmlns:converters="clr-namespace:WeModPatcher.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
